# apod-linux

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  apod_fetcher.py  wallpaper.py
